[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "rl-gym-api"
version = "0.1.0"
description = "A production FastAPI service for reinforcement learning with OpenAI Gymnasium"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "sqlalchemy>=2.0.36,<3",
    "alembic>=1.14,<2",
    "aiosqlite>=0.20,<1",
    "python-jose[cryptography]>=3.3,<4",
    "passlib[bcrypt]>=1.7.4,<2",
    "python-multipart>=0.0.18,<1",
    "httpx>=0.28,<1",
    "websockets>=14,<17",
    "gymnasium>=1.0,<2",
    "stable-baselines3>=2.4,<3",
    "numpy>=2.1,<3",
    "pandas>=2.2,<3",
    "torch>=2.5,<3",
    "email-validator>=2.1,<3",
    "slowapi>=0.1.9,<1",
    "asyncpg>=0.29,<1",
    "arq>=0.26,<1",
    "redis>=5.0,<6",
    "boto3>=1.34,<2",
    "boto3-stubs[s3]>=1.34,<2",
    "grpcio>=1.70,<2",
    "grpcio-tools>=1.70,<2",
    "protobuf>=6.30,<7",
    "prometheus-client>=0.20,<1",
    "starlette-prometheus>=0.3,<1",
    "stripe>=8.0,<9",
    "ray[tune]>=2.9,<3",
    "prefect>=3.0,<4",
    "optuna>=3.6,<4",
    "optuna-integration[sqlalchemy]>=3.6,<4",
    "sb3-contrib>=2.4,<3",
    "pettingzoo>=1.24,<2",
    "supersuit>=3.9,<4",
    "h5py>=3.10,<4",
    "scipy>=1.12,<2",
    "cloudpickle>=3.0,<4",
    "itsdangerous>=2.1,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<10",
    "pytest-asyncio>=0.24,<2",
    "pytest-cov>=6,<8",
    "anyio>=4.7,<5",
    "ruff>=0.8,<1",
    "mypy>=1.13,<2",
    "bandit>=1.7,<2",
    "safety>=3.0,<4",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (required by FastAPI Depends)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disable_error_code = ["untyped-decorator", "misc"]
warn_unused_ignores = false
